package app

// import (
// 	// "Chat/Client/Server/communicator"
// )

type App struct {
	// localServer  *LocalServer
	// remoteServer *RemoteServer
	// communicator communicator.Communicator
}

func NewApp() *App {
	return &App{
		// communicator: communicator.NewCommunicator()
		// localServer:  NewLocalServer(),
		// remoteServer: NewRemoteServer(),
	}
}

func (a *App) Run() {
	// a.communicator.Serve()
	// remoteServerCh := make(chan string)

	// go a.remoteServer.Serve(remoteServerCh)
	// a.localServer.Serve()
}
