@startuml
!pragma layout smetana

class chatService {
    +NewChatService() chan\nchan to send command to grpcServer
}
class userService {
    +NewUserService() chan\nchan to send command to grpcServer
}

interface ChatService {}
interface UserService {}
interface GRPCServer{
    +ChatService
    +UserService
}
interface RemoteServer {
    Send(message) chan\nchan to wait response from remoteServer
}

class grpcServer {
    -communicator RemoteServer
}
class remoteServer {
    +NewRemoteServer() chan\nchan for notification from remoteServer to grpc
}
class app {
}

chatService -u-> ChatService
userService -u-> UserService

grpcServer ..> ChatService
grpcServer ..> UserService
grpcServer -u-> GRPCServer

remoteServer -u-> RemoteServer

app ..> GRPCServer
app ..> RemoteServer

@enduml